--- a/src/index.css
+++ b/src/index.css
@@ -68,7 +68,7 @@ ul {
   -o-transform: translate(-50%, -50%);
   display: flex;
   flex-direction: column;
-  row-gap: 30px;
+  row-gap: 40px;
   width: 100%;
 }
 .sidebar-nav-icons li {
@@ -154,3 +154,27 @@ ul {
 }
 
 /* bottom navgbar styling end */
+
+/* list button styling start */
+.listButton {
+  padding: 10px 15px;
+  color: #fff;
+  background-color: var(--primarycolor);
+  outline: none;
+  border: none;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+  font-family: "Nunito", sans-serif;
+  transition: 0.5s;
+  -webkit-transition: 0.5s;
+  -moz-transition: 0.5s;
+  -ms-transition: 0.5s;
+  -o-transition: 0.5s;
+}
+.listButton:hover {
+  background-color: var(--primaryColorHover);
+}
+/* list b utton styling end */
