--- a/src/index.css
+++ b/src/index.css
@@ -190,3 +190,11 @@ ul {
   height: 70px !important;
 }
 /* dp modal replace css end */
+
+/* crerate group modal */
+.create-group-modal {
+  border: none !important;
+  outline: none !important;
+  font-family: "Nunito", sans-serif !important;
+  background-color: white;
+}
